<resources>
    <string name="app_name">MyShop!</string>
    <string name="correo_de_usuario">Correo de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="olvidaste_t_contrase_a">¿Olvidaste tú contraseña?</string>
    <string name="bienvenido_a_myshop">Bienvenido a MyShop!</string>
    <string name="textview">TextView</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="creaci_n_de_cuenta">Creación de Cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="escribe_tu_nombre">Escribe tu nombre</string>
    <string name="correo">Correo</string>
    <string name="escribe_tu_correo">Escribe tu correo</string>
    <string name="contrase_a_1">Contraseña</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="masculino">Masculino</string>
    <string name="crear_cuenta_1">Crear Cuenta</string>
    <string name="g_nero">Género</string>
    <string name="otro">otro</string>
    <string name="femenino">Femenino</string>
    <string name="androidmarketlogo">androidmarketlogo</string>
    <string name="productos">Productos</string>
    <string name="producto_1">producto 1</string>
    <string name="producto_2">producto 2</string>
    <string name="producto_3">producto 3</string>
    <string name="producto_4">producto 4</string>
    <string name="producto_5">producto 5</string>
    <string name="producto_6">producto 6</string>
    <string name="producto_7">producto 7</string>
    <string name="producto_8">producto 8</string>
    <string name="producto_9">producto 9</string>
    <string name="perfil">Perfil</string>
    <string name="mi_carro">Mi Carro</string>
    <string name="producto_10">producto 10</string>
    <string name="producto_11">producto 11</string>
    <string name="producto_12">producto 12</string>
    <string name="inicio">Inicio</string>
    <string name="todo">TODO</string>
    <string name="apellido">Apellido</string>
    <string name="name">Name</string>

    <string name="email">Email</string>

    <string name="felicidades_cuenta_creada">Felicidades, Cuenta Creada</string>
    <string name="ok">Ok</string>
    <string name="img1">img1</string>
    <string name="ingrese_a_crear_cuenta_activity">Ingrese a crear cuenta (activity)</string>
    <string name="esta_es_una_prueba_de_activity">Esta es una prueba de Activity</string>
</resources>