<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:ignore="LabelFor"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:text="@string/producto_7"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="1"
        android:text="@string/producto_8"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="2"
        android:text="@string/producto_9"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="135dp"
        android:layout_height="115dp"
        android:layout_row="1"
        android:layout_column="1"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/market" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="135dp"
        android:layout_height="115dp"
        android:layout_row="1"
        android:layout_column="2"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/market" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="135dp"
        android:layout_height="115dp"
        android:layout_row="5"
        android:layout_column="0"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/market" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="135dp"
        android:layout_height="115dp"
        android:layout_row="5"
        android:layout_column="1"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/market" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="135dp"
        android:layout_height="115dp"
        android:layout_row="5"
        android:layout_column="2"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/market" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="135dp"
        android:layout_height="115dp"
        android:layout_row="3"
        android:layout_column="0"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/market" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="135dp"
        android:layout_height="115dp"
        android:layout_row="3"
        android:layout_column="1"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/market" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="135dp"
        android:layout_height="115dp"
        android:layout_row="3"
        android:layout_column="2"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/market" />

    <TextView
        android:id="@+id/txt_productos"
        android:layout_width="129dp"
        android:layout_height="51dp"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/inicio"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:visibility="visible" />

    <Button
        android:id="@+id/button2"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_column="0"
        android:text="@string/productos" />

    <Button
        android:id="@+id/button3"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_column="1"
        android:text="@string/perfil" />

    <Button
        android:id="@+id/button4"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_column="2"
        android:text="@string/mi_carro" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="135dp"
        android:layout_height="115dp"
        android:layout_row="1"
        android:layout_column="0"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/market" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/producto_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/producto_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="2"
        android:text="@string/producto_3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/producto_4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:text="@string/producto_5"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="2"
        android:text="@string/producto_6"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

</GridLayout>